# pacman-json

./: Cargo.toml  README.md  pacman-json.code-workspace
completions/: _pacjump  _pacjump.ps1  _pacman-json  _pacman-json.ps1  pacjump.bash  pacjump.elv  pacjump.fish  pacman-json.bash  pacman-json.elv  pacman-json.fish
src/: completions.rs  info.rs  lib.rs  main.rs  recurse_deps.rs  reverse_deps.rs  siglevel.rs
