[package]
name = "pacjump"
version = "0.2.1"
description = "Dump pacman packages information in JSON"
documentation = "https://github.com/bryango/pacman-json"
authors = ["Bryan Lai <bryanlais@gmail.com>"]
keywords = ["archlinux", "json", "alpm"]
categories = ["command-line-utilities"]
readme = "README.md"
license-file = "LICENSE"
edition = "2021"
default-run = "pacjump"

[[bin]]
name = "pacjump-completions"
path = "src/completions.rs"

## https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpm = "2.2.2"
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
clap_complete = "4.5.1"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
