[package]
name = "pacjump"
version = "0.3.2"
description = "Dump pacman packages information in JSON"
documentation = "https://github.com/bryango/pacman-json"
authors = ["Bryan Lai <bryanlais@gmail.com>"]
keywords = ["archlinux", "json", "alpm"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "GPL-3.0-only"
edition = "2021"
default-run = "pacjump"

[[bin]]
name = "pacjump-completions"
path = "src/completions.rs"

## https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpm = "3.0"
alpm-sys = "3.0"
anyhow = "1.0.80"
backtrace-on-stack-overflow = { version = "0.3.0", optional = true }
clap = { version = "4.5.2", features = ["derive"] }
clap_complete = "4.5.1"
derive_more = { version = "1.0.0", features = ["deref", "deref_mut", "from", "into_iterator"] }
indexmap = "2.3.0"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"

[features]
backtrace-overflow = ["dep:backtrace-on-stack-overflow"]
